// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner overview 1 snapshot 1`] = `
<DocumentFragment>
  <svg
    class="css-1pf5xd"
    fill="none"
    height="61"
    role="img"
    stroke="currentcolor"
    stroke-width="6"
    viewBox="0 0 32 32"
    width="61"
  >
    <title>
      Loading...
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="10"
    />
    <circle
      class="css-wpcq6n"
      cx="16"
      cy="16"
      r="10"
      stroke-dasharray="62.83185307179586"
      stroke-dashoffset="47.12388980384689"
    />
  </svg>
</DocumentFragment>
`;

exports[`Spinner overview 2 snapshot 1`] = `
<DocumentFragment>
  <svg
    class="css-1pf5xd"
    fill="none"
    height="61"
    role="img"
    stroke="currentcolor"
    stroke-width="3"
    viewBox="0 0 32 32"
    width="61"
  >
    <title>
      Loading...
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="13"
    />
    <circle
      class="css-wpcq6n"
      cx="16"
      cy="16"
      r="13"
      stroke-dasharray="81.68140899333463"
      stroke-dashoffset="61.26105674500097"
    />
  </svg>
</DocumentFragment>
`;

exports[`Spinner overview 3 snapshot 1`] = `
<DocumentFragment>
  <svg
    class="css-1pf5xd"
    fill="none"
    height="39"
    role="img"
    stroke="currentcolor"
    stroke-width="6"
    viewBox="0 0 32 32"
    width="39"
  >
    <title>
      Loading...
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="10"
    />
    <circle
      class="css-wpcq6n"
      cx="16"
      cy="16"
      r="10"
      stroke-dasharray="62.83185307179586"
      stroke-dashoffset="47.12388980384689"
    />
  </svg>
</DocumentFragment>
`;

exports[`Spinner overview 4 snapshot 1`] = `
<DocumentFragment>
  <svg
    class="css-1pf5xd"
    fill="none"
    height="31"
    role="img"
    stroke="currentcolor"
    stroke-width="3"
    viewBox="0 0 32 32"
    width="31"
  >
    <title>
      Loading...
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="13"
    />
    <circle
      class="css-wpcq6n"
      cx="16"
      cy="16"
      r="13"
      stroke-dasharray="81.68140899333463"
      stroke-dashoffset="61.26105674500097"
    />
  </svg>
</DocumentFragment>
`;

exports[`Spinner overview 5 snapshot 1`] = `
<DocumentFragment>
  <svg
    class="css-1pf5xd"
    fill="none"
    height="27"
    role="img"
    stroke="currentcolor"
    stroke-width="5"
    viewBox="0 0 32 32"
    width="27"
  >
    <title>
      Loading...
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="11"
    />
    <circle
      class="css-wpcq6n"
      cx="16"
      cy="16"
      r="11"
      stroke-dasharray="69.11503837897544"
      stroke-dashoffset="51.83627878423158"
    />
  </svg>
</DocumentFragment>
`;
